# chipcounter

./: .gitattributes  .gitignore  README.md  convert_readme.py  copy_files_to_py.sh  index.html  main.py  pyproject.toml  run_on_pi_via_ssh.sh
.github/workflows/: deploy.yml  deploy_pydio_compressed-zip.yml  gh-pages.yml  main.yml
assets/: config.toml
assets/styles/: stylesheet.qss
chip_counter/: log.py
chip_counter/config/: __init__.py  models.py
chip_counter/controllers/: __init__.py  controller.py  ctrl_password.py  main_controller.py
chip_counter/models/: count_manager.py  gpio.py  input_manager.py  utils.py
chip_counter/views/: __init__.py  history_view.py  home_view.py  main_view.py  password_view.py  settings_view.py  view.py
chip_counter/views/widgets/: __init__.py  count_widget.py  header_widgets.py  page_widgets.py  plot_widget.py
schematics/: chip_counter.s##  chip_counter.sch
